fix: remove horizontal & vertical scrollbars

--- a/src/main.css
+++ b/src/main.css
@@ -1,14 +1,19 @@
-html,
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
-  height: 100%;
+  margin: 0;
 }
 
 .editor {
   border: 0;
+  display: block;
   font-size: 1em;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  resize: none;
 }
 
 .editor:focus {
